[Style] Modificar el estilo del login y del logo de la aplicación en el navbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,15 @@ body {
   height: 100vh;
   width: 100%;
 }
+
+.darlin {
+  width: 70px;
+  height: 70px;
+}
+
+.dalinComoFondo {
+  background-image: url("../public/hola.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
