--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,9 +9,9 @@ body {
   height: 70px;
 }
 
-.dalinComoFondo {
+.sena {
   /* background-image: url("../public/hola.gif"); */
-  background-image: url("https://tenor.com/es-419/view/kareena-kapoor-wonder-woman-gif-18433720.gif");
+  background-image: url("../public/g.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
